crates/justrdp-derive/tests/ui/on_enum.stderr
error: derive only supports structs
 --> tests/ui/on_enum.rs:4:10
  |
4 | pub enum Bad {
  |          ^^^
