crates/justrdp-derive/tests/ui/on_enum.rs
use justrdp_derive::Encode;

#[derive(Encode)]
pub enum Bad {
    A,
    B,
}

fn main() {}
